--- a/Tables.html
+++ b/Tables.html
@@ -21,7 +21,7 @@
     <main><h1>Tables </h1>
         <h2>hq</h2>
         <table border="2">
-            <caption><h1>Technologies</</caption>
+            <caption><h1>Technologies used</</caption>
 
             <tr>
                 <td colspan="2">2 cells used </td>
