--- a/Tables.html
+++ b/Tables.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a>   
+        <a href="index.html">Home</a>   
         <a href="class2.html">Class2</a>    
         <a href="class3.html">Class3</a>
         <a href="body.html">Body</a>
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main><h1>Tables </h1>
-        <h2>hq</h2>
+        <h2>sepstr</h2>
         <table border="2">
             <caption><h1>Technologies used</</caption>
 
