--- a/Tables.html
+++ b/Tables.html
@@ -19,12 +19,12 @@
         </nav>
     </header>
     <main><h1>Tables </h1>
-        <h2>sepstr</h2>
+        <h2>sexy lady</h2>
         <table border="2">
             <caption><h1>Technologies used</</caption>
 
             <tr>
-                <td colspan="2">2 cells used </td>
+                <td colspan="2">2 cells used </td> 
             </tr>
 
             <tr>
