--- a/Tables.html
+++ b/Tables.html
@@ -19,9 +19,9 @@
         </nav>
     </header>
     <main><h1>Tables </h1>
-        <h2>sexy lady</h2>
+        <h2>Sepia Octopus Hai</h2>
         <table border="2">
-            <caption><h1>Technologies used</</caption>
+            <caption><h1>Technologies Tech</h1> </caption>
 
             <tr>
                 <td colspan="2">2 cells used </td> 
