--- a/Tables.html
+++ b/Tables.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main><h1>Tables </h1>
-        <h2>Sepia Octopus Hai</h2>
+        <h2>Sepia Octopus Loligo</h2>
         <table border="2">
             <caption><h1>Technologies Tech</h1> </caption>
 
