--- a/Tables.html
+++ b/Tables.html
@@ -21,7 +21,7 @@
     <main><h1>Tables </h1>
         <h2>Sepia Octopus Loligo</h2>
         <table border="2">
-            <caption><h1>Technologies Tech</h1> </caption>
+            <caption><h1>Technologies methy Tech</h1> </caption>
 
             <tr>
                 <td colspan="2">2 cells used </td> 
