--- a/ttbl.html
+++ b/ttbl.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main><h1>Tables </h1>
-        <h2>Sepia Octopus Loligo</h2>
+        <h2>Ssex</h2>
         <table border="2">
             <caption><h1>Technologies methy Tech</h1> </caption>
 
